--- a/src/views/Landing.css
+++ b/src/views/Landing.css
@@ -22,7 +22,7 @@
     align-items: flex-end;
     h1{
         margin: 0;
-        z-index: 4;
+        z-index: 1;
     }
 }
 .sub_heading{
